# e-commerce

./: .gitignore  docker-compose.yml  pyproject.toml
deploy/: .dockerignore  Dockerfile  db_base_backup.sh  requirements.txt
src/: Dockerfile  db.sqlite3  requirements.txt
src/account/: forms.py  models.py  urls.py  views.py
src/account/templates/account/: account_activated.html  activation_email.html  activation_invalid.html  login.html  register.html  register_done.html  registration_send_email_done.html
src/account/templates/account/modal/: login.html
src/account/templates/modal/: login.html
src/account/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
src/basket/: admin.py  models.py  urls.py  views.py
src/basket/migrations/: 0001_initial.py
src/basket/static/basket/js/: basket.js
src/basket/templates/: basket.html
src/basket/templates/basket/: basket.html
src/basket/templates/basket/modal/: basket.html
src/comments/: admin.py  forms.py  models.py  setup.py  urls.py  views.py
src/comments/migrations/: 0001_initial.py
src/comments/static/comments/css/: comments.css
src/comments/static/comments/js/: comments.js
src/comments/templates/comments/: widget.html
src/comments/templatetags/: comments_tags.py
src/ecommerce/: settings.py  urls.py
src/ecommerce/core/: middleware.py
src/eshop/: urls.py  views.py
src/eshop/templates/items/: list_items.html
src/products/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_images_alter_categories_options_and_more.py  0003_products_params.py  0004_brand_country_products_brand_products_season_and_more.py  0005_delete_brand_alter_products_country_and_more.py  0006_colors_sizes_store.py  0007_store_unique_variant_color_size_product.py  0008_alter_categories_options_alter_colors_options_and_more.py  0009_alter_products_brand_alter_products_is_active.py
src/products/services/: __init__.py  product_payload_builder.py
src/products/static/products/css/: detail.css
src/products/static/products/js/: detail.js  products.html.js  products.js
src/products/templates/: detail.html  items_partial.html
src/products/templates/ajax/: items_partial.html  product_modal_content.html
src/products/templates/items/: list_items.html  products.html  products_.html
src/products/templatetags/: filters.py
src/search/: admin.py  models.py  urls.py  views.py
src/search/migrations/: 0001_initial.py  0002_alter_searchfield_field_type.py
src/search/static/css/: date_range.css  main.css  range.css
src/search/static/js/: date_range.js  range.js  search.js  search_panel.js  search_results_loader.js  select.js
src/search/templates/search/: search_form.html  search_panel.html  search_result.html
src/search/templates/search/items/: date_range.html  range.html  select.html  text.html
src/search/templatetags/: search_tags.py
src/settings/: admin.py  apps.py  context_processors.py  models.py
src/settings/migrations/: 0001_initial.py  0002_alter_menuitem_table_comment_and_more.py  0003_settings_description.py
src/static/admin/css/src/: style.css
src/static/css/: style.css
src/static/js/: base_quick_view.js  basket.js
src/templates/base/: _banner.html  _footer.html  _header.html  _icons.html  _list_products.html  _preloader.html  _search.html  _slide_bar.html  _top_products.html  base.html
src/templates/modals/: _basket_view.html  _product_card.html  _products.html  _quick_view.html
